--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,51 +7,54 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Warrick WIlls
+    tagline: Senior Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    timezone: America/Cancun Timezone
+    email: warrick.j@live.com
+    phone: +64 21 116 8901
+    timezone: # Pacific/Auckland Timezone
     citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
+    website: # holisthub.com #do not add http://
+    linkedin: https://www.linkedin.com/in/warrick-wills-b7b051126
+    xing: # alandoe
+    github: warrickwills
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
+    twitter: # '@webjeda'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
     pdf: http://www.africau.edu/images/default/sample.pdf
 
-    languages:
-      title: Languages
-      info:
-        - idiom: English
-          level: Native
-
-        - idiom: French
-          level: Professional
-
-        - idiom: Spanish
-          level: Professional
+    #languages:
+    #  title: Languages
+    #  info:
+    #    - idiom: English
+    #      level: Native
+    #
+    #    - idiom: French
+    #      level: Professional
+    #
+    #    - idiom: Spanish
+    #      level: Professional
 
     interests:
       title: Interests
       info:
-        - item: Climbing
+        - item: Drumming
           link:
 
-        - item: Snowboarding
+        - item: Cricket
           link:
 
-        - item: Cooking
+        - item: Blogging
           link:
+        
+        - item: Blogging
+          link: holisthub.com
 
 career-profile:
     title: Career Profile
@@ -217,5 +220,5 @@ skills:
       - name: Sketch & Photoshop
         level: 60%
 
-footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+#footer: >
+#    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
